.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Schedule_Maintance_Message__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This will on/off Schedule maintenance message/image</description>
    <fields>
        <fullName>xcdhcm__End_Date_Text__c</fullName>
        <inlineHelpText>Should be this format &quot;Tuesday January 28, 03:00 AM GMT&quot;</inlineHelpText>
        <label>End Date Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__ShowContinue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hide/Show continue link in schedule maintenance message</description>
        <label>xShowContinue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Show_Continue_Permission_Sets__c</fullName>
        <description>Permission set which needs to view the continue link</description>
        <label>Show Continue - Permission Sets</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Show_Continue_Profiles__c</fullName>
        <description>Profile which needs to view the continue link</description>
        <label>Show Continue - Profiles</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Start_Date_Text__c</fullName>
        <inlineHelpText>Should be this format &quot;Tuesday January 28, 03:00 AM GMT&quot;</inlineHelpText>
        <label>Start Date Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Schedule_Maintance_Message</label>
</CustomObject>